@@ -1,5 +1,5 @@
 OTEL_EXPORTER_OTLP_ENDPOINT=http://grafana-alloy:4317
-OTEL_SERVICE_NAME=planetary-crs-registry
+OTEL_SERVICE_NAME=planet_crs_registry
 OTEL_TRACES_EXPORTER=otlp
 OTEL_METRICS_EXPORTER=none
 OTEL_LOGS_EXPORTER=otlp
