@@ -31,4 +31,4 @@ __url__ = "https://github.com/pole-surfaces-planetaires/planet_crs_registry"
 __author__ = "Jean-Christophe Malapert"
 __author_email__ = "jean-christophe.malapert@cnes.fr"
 __license__ = "GNU Lesser General Public License v3"
-__copyright__ = "2021-2022, CNES (Jean-Christophe Malapert for PDSSP)"
+__copyright__ = "2021-2024, CNES (Jean-Christophe Malapert for PDSSP)"
